--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -40,7 +40,7 @@
                             <div class="inner d-flex flex-column justify-content-center">
                                 <h1 class="heading">Welcome to the RAk3rman Minecraft Server Network</h1>
                                 <p class="lead larger">Running Vanilla Minecraft 1.15.2 & ModSauce 2.<br>Built & managed by yours truly, <a class="hover text-white" href="https://www.rak3rman.com">RAk3rman</a>.<br>Join the community in Discord!</p>
-                                <p class="lead">Vanilla IP: mc.rak3rman.com<br>ModSauce 2 IP: mc.rak3rman.com:25566</p>
+                                <p class="lead">Vanilla & ModSauce IP's available in Discord #information</p>
                             </div>
                         </div>
                         <div class="col-lg-5">
