--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -37,10 +37,11 @@
                 <div class="container inner">
                     <div class="row">
                         <div class="col-lg-7">
-                            <div class="inner d-flex flex-column justify-content-center">
+                            <div class="inner flex-column justify-content-center">
                                 <h1 class="heading">Welcome to the RAk3rman Minecraft Server Network</h1>
-                                <p class="lead larger">Running Vanilla Minecraft 1.15.2 & ModSauce 2.<br>Built & managed by yours truly, <a class="hover text-white" href="https://www.rak3rman.com">RAk3rman</a>.<br>Join the community in Discord!</p>
-                                <p class="lead">Vanilla & ModSauce IP's available in Discord #information</p>
+                                <p class="lead larger">Running Vanilla Minecraft 1.15.2 over multiple worlds.<br>Built & managed by yours truly, <a class="hover text-white" href="https://www.rak3rman.com">RAk3rman</a>.<br>Join the community in Discord!</p>
+                                <p class="lead">Server IP's available in Discord under #information</p>
+                                <a href="https://www.rak3rman.com"><button class="btn btn-full-rounded btn-white"><i class="fas fa-share"></i> Return to www.rak3rman.com</button></a>
                             </div>
                         </div>
                         <div class="col-lg-5">
@@ -53,7 +54,7 @@
         <div class="mt-auto ml-auto mr-auto w-100">
             <div class="container inner pt-30 pb-40">
                 <div class="space10"></div>
-                <p>© 2020 Radison Akerman. All rights reserved.</p>
+                <p>© <span id="year-cp"></span><script>var d = new Date();document.getElementById("year-cp").innerHTML = d.getFullYear()</script> Radison Akerman. All rights reserved.</p>
                 <ul class="social social-mute social-s">
                     <li><a href="https://github.com/RAK3RMAN"><i class="fab fa-github"></i></a></li>
                     <li><a href="https://www.facebook.com/RAkerman"><i class="fab fa-facebook-f"></i></a></li>
